tests/baselines/reference/thisInConstructorParameter2.errors.txt
tests/cases/compiler/thisInConstructorParameter2.ts(5,28): error TS2333: 'this' cannot be referenced in constructor arguments.
tests/cases/compiler/thisInConstructorParameter2.ts(5,39): error TS2333: 'this' cannot be referenced in constructor arguments.


==== tests/cases/compiler/thisInConstructorParameter2.ts (2 errors) ====
    class P {
        x = this;
        static y = this;
    
        constructor(public z = this, zz = this, zzz = (p = this) => this) {
                               ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
                                          ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
            zzz = (p = this) => this;
        }
    
        foo(zz = this) { zz.x; }
        static bar(zz = this) { zz.y; }
    }